k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: platform-assignment
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
  - port: 80
    targetPort: 3000
