k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: platform-assignment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.3.0

        ports:
        - containerPort: 9092

        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"

          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service

metadata:
  name: kafka-service
  namespace: platform-assignment

spec:
  type: ClusterIP

  selector:
    app: kafka

  ports:
  - port: 9092
    targetPort: 9092
